--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@
 
 
 #mensaje{
-    
+
     cursor: url(../img/puntero.png), pointer;
     background-color:rgba(255, 255, 255, 0.562);
     font-weight: bold;
@@ -105,7 +105,7 @@
     border-color: rgb(255, 144, 0);
     box-shadow: 0 1px 1px rgba(229, 103, 23, 0.075)inset, 0 0 8px rgba(255,144,0,0.6);
     outline-color: rgb(197, 112, 0);
-    
+
 }
 
 .label{
@@ -128,7 +128,7 @@
 
 .play{
     cursor: url(../img/puntero.png), pointer;
-    background-image: url(../img/play.png);
+    /* background-image: url(../img/play.png); */
     width: 60px; 
     height: 60px;
     
@@ -146,26 +146,34 @@
 
 }
 
-.stop{
+.mono{
     cursor: url(../img/puntero.png), pointer;
-    background-image: url(../img/stop.png);
-    width: 60px; 
-    height: 60px;
-    
+    width: 150px;
+    height: 150px;
+
     background-position: center center;
     background-repeat:no-repeat;
     background-size:cover;
 
-    border-color: rgb(255, 255, 255);
-    box-shadow: 0 1px 1px rgba(255, 255, 255, 0.76)inset, 0 0 8px rgba(255, 255, 255, 0.6);
-    border-radius: 30px;
-
-    margin: 20px 0px 0px 30px;
-    display: flex;
+    display: none;
     position: absolute; /* Div hijo para posicionar */
-
+    margin: -100px 0px 0px -90px;
+    
 }
+.mono_{
+    cursor: url(../img/puntero.png), pointer;
+    width: 150px;
+    height: 150px;
 
+    background-position: center center;
+    background-repeat:no-repeat;
+    background-size:cover;
+
+    display: none;
+    position: absolute; /* Div hijo para posicionar */
+    margin: -100px 0px 0px 370px;
+    
+}
 
 
 /* Animacion CSS para Label */
@@ -203,3 +211,75 @@
    #label span:nth-child(14){ animation-delay:.65s; }
 
 /* Fin de Animacion de texto */
+
+/* Animacion de Ave  */
+
+.bird {
+	background-image: url(../img/bird-cells-new.png);
+	background-size: auto 100%;
+	width: 176px; 
+	height: 250px;
+	will-change: background-position;
+	animation-name: fly-cycle;
+	animation-timing-function: steps(10);
+	animation-iteration-count: infinite;
+
+
+}
+
+.bird--one {
+		animation-duration: 1s;
+		animation-delay: -0.5s;
+
+}
+.bird--two {
+		animation-duration: 0.9s;
+		animation-delay: -0.75s;
+
+}
+
+.bird-container {
+	position: absolute;
+	top: 20%;
+	left: -10%;
+	transform: scale(0) translateX(-10vw);
+	will-change: transform;	
+	animation-name: fly-right-one;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+	
+}
+
+
+.bird-container--one {
+		animation-duration: 15s;
+		animation-delay: 0;
+}
+	
+.bird-container--two {
+		animation-duration: 16s;
+		animation-delay: 1s;
+}
+
+
+
+@keyframes fly-cycle {
+	
+	100% {
+		background-position: -3600px 0;
+	}
+	
+}
+
+@keyframes fly-right-one {	
+	0% { transform: scale(0.3) translateX(-10vw); }	
+	10% { transform: translateY(2vh) translateX(10vw) scale(0.4);}	
+	20% {transform: translateY(0vh) translateX(30vw) scale(0.5);}	
+	30% {transform: translateY(4vh) translateX(50vw) scale(0.6);	}	
+	40% {transform: translateY(2vh) translateX(70vw) scale(0.6);}	
+	50% {	transform: translateY(0vh) translateX(90vw) scale(0.6);}	
+	60% {transform: translateY(0vh) translateX(110vw) scale(0.6);}
+	100% {transform: translateY(0vh) translateX(110vw) scale(0.6);}
+}
+
+/* Fin de Animacion de Ave */
